feat: replace lucide-react icons with ph icons, update related components, and remove unused code

--- a/src/components/about/Organization.astro
+++ b/src/components/about/Organization.astro
@@ -30,7 +30,7 @@ const { title, span, jobType, designation, link, logo } = Astro.props;
           <h3 class="text-lg font-semibold text-white group-hover:underline">
             {title}
             <Icon
-              name="mdi:open-in-new"
+              name="ph:arrow-up-right-bold"
               class="ml-2 hidden h-4 w-4 transition-transform group-hover:inline-block group-hover:text-white/60"
             />
           </h3>
