--- a/src/components/sanity/portable-yt-embed.astro
+++ b/src/components/sanity/portable-yt-embed.astro
@@ -1,4 +1,6 @@
 ---
+import { Icon } from "astro-icon/components";
+
 const { url } = Astro.props.node;
 function getYouTubeDetails(videoUrl: string) {
   const urlObj = new URL(videoUrl);
@@ -13,7 +15,6 @@ function getYouTubeDetails(videoUrl: string) {
   };
 }
 const { embedUrl, thumbnailUrl } = getYouTubeDetails(url);
-import { Youtube } from "lucide-react";
 ---
 
 <div
@@ -39,7 +40,7 @@ import { Youtube } from "lucide-react";
       rel="noopener noreferrer"
       class="group m-4 flex w-full items-center gap-3 rounded-lg border border-red-500/90 bg-red-500/70 px-4 py-2 no-underline backdrop-blur-2xl backdrop-filter transition-all hover:bg-red-500/30 [&>svg]:text-red-200 [&>svg]:transition-all hover:[&>svg]:scale-125"
     >
-      <Youtube />
+      <Icon name="ph:youtube-logo" class="h-5 w-5 text-red-500" />
       <span class="text-sm font-medium text-white/90">
         Subscribe to My Channel
       </span>
