--- a/src/components/home/TestimonialsSection.astro
+++ b/src/components/home/TestimonialsSection.astro
@@ -42,7 +42,7 @@ import Section from "../Section.astro";
               >
                 Kairos Club
                 <Icon
-                  name="mdi:open-in-new"
+                  name="ph:arrow-up-right-bold"
                   class="ml-2 hidden h-5 w-5 transition-transform group-hover:inline-block group-hover:text-white/60"
                 />
               </p>
