--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -26,7 +26,7 @@ import SocialLinks from "@/constants/socials";
       onclick="scrollToTop()"
       class="mx-4 flex items-center gap-1 rounded-full p-2 opacity-70 transition-all hover:bg-white/10 hover:underline hover:opacity-100"
     >
-      <Icon name="mdi:chevron-up" class="h-7 w-7 hover:stroke-2" />
+      <Icon name="ph:caret-up-bold" class="h-7 w-7 hover:stroke-2" />
     </button>
   </nav>
 </footer>
