--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -38,7 +38,7 @@ const nextUrl =
           </h1>
           <div class="flex flex-col gap-10">
             {blogs.map((blog) => (
-              <BlogCard key={blog._id} blog={blog} />
+              <BlogCard blog={blog} />
             ))}
           </div>
 
